--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <!-- NAV -->
+        <nav class="nav">
+            <div class="container flex">
+                <!-- Clothes type list -->
+                <div class="flex list">
+                    <ul class="flex">
+                        <li><a href="">Donna</a></li>
+                        <li><a href="">Uomo</a></li>
+                        <li><a href="">Bambini</a></li>
+                    </ul>
+                </div>
+                <!-- /Clothes type list -->
+                <div class="flex list">
+                    <a class="nav-img" href=""><img src="./img/boolean-logo.png" alt="logo Boolando"></a>
+                </div>
+                <div class="flex list">
+                    <ul class="flex">
+                        <li>
+                            <a href=""><i class="fa-solid fa-user"></i></a>
+                            <a href=""><i class="fa-regular fa-heart"></i></a>
+                            <a href=""><i class="fa-solid fa-bag-shopping"></i></a>
+                        </li>
+                    </ul>
+                </div>
+              
+            </div>
+        </nav>
         <!-- /NAV -->
     </header>
     <!-- /HEADER -->
